--- a/.env
+++ b/.env
@@ -19,19 +19,19 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-#DB_CONNECTION=mysql
-#DB_HOST=mysql-6e98810-hadilbenayed7-3298.g.aivencloud.com
-#DB_PORT=12041
-#DB_DATABASE=dbcommerce
-#DB_USERNAME=iitg4
-#DB_PASSWORD=AVNS_krGbCsA41oj3B-vINc8
-
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_HOST=mysql-6e98810-hadilbenayed7-3298.g.aivencloud.com
+DB_PORT=12041
 DB_DATABASE=dbcommerce
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=iitg4
+DB_PASSWORD=AVNS_krGbCsA41oj3B-vINc8
+
+#DB_CONNECTION=mysql
+#DB_HOST=127.0.0.1
+#DB_PORT=3306
+#DB_DATABASE=dbcommerce
+#DB_USERNAME=root
+#DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
